more alignment issues

--- a/assets/css/added.css
+++ b/assets/css/added.css
@@ -9,7 +9,9 @@
     margin: auto;
     padding-top: 50px;
 }
-
+span#totalSpan{
+    vertical-align: top;
+}
 div#innerCircle {
     width: 50px;
     height: 50px;
@@ -18,5 +20,5 @@ div#innerCircle {
     background: #fff;
     text-align: center;
     margin:auto;
-    vertical-align: top;
+    
 }
